<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:padding="10dip" >

   <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_gravity="center" >
        
	    <ImageView
	        android:layout_width="181dp"
	        android:layout_height="107dp"
	        android:contentDescription="@string/string_hint"
	        android:scaleType="fitCenter"
	        android:src="@drawable/logo" />
	    
	    <TextView 
	        android:id="@+id/version_text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="right"
	        android:textSize="15sp"
	        />
	    
	    <Button 
	        android:id="@+id/word_display_button"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/word_display_label"
	        android:textSize="15sp"
	        android:textColor="@color/button_word"
	        android:layout_marginBottom="2sp"
	        android:background="@drawable/button_green"/>
	    
	    <Button 
	        android:id="@+id/word_send_button"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/word_send_label"
	        android:textSize="15sp"
	        android:textColor="@color/button_word"
	        android:layout_marginBottom="2sp"
	        android:background="@drawable/button_green"/>
	    
	    <Button 
	        android:id="@+id/rule_button"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/rule_label"
	        android:textSize="15sp"
	        android:textColor="@color/button_word"
	        android:layout_marginBottom="2sp"
	        android:background="@drawable/button_green"/>

	    <Button 
	        android:id="@+id/about_button"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/about_label"
	        android:textSize="15sp"
	        android:textColor="@color/button_word"
	        android:layout_marginBottom="2sp"
	        android:background="@drawable/button_green"/>
    </LinearLayout>
</LinearLayout>