<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <!-- 平民词汇 -->
    <TextView
        android:id="@+id/text_civil_player_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_civil_player_word" 
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/civil_player_word"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textSize="20sp"
        android:maxLength="10" >
    </EditText>
    
    <!-- 打酱油词汇 -->
    <TextView
        android:id="@+id/text_trick_player_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_trick_player_word" 
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/trick_player_word"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textSize="20sp" 
        android:maxLength="10" >
    </EditText>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        
	    <Button 
	     android:id="@+id/game_check_button"
	     android:text="@string/game_check_button"
	     android:layout_width="wrap_content"
	     android:layout_height="wrap_content"
	     android:layout_gravity="center"
	     android:paddingLeft="25dip"
	     android:paddingRight="25dip"
	     android:textSize="20sp"
	     />
	    
	    <Button 
	     android:id="@+id/game_start_button"
	     android:text="@string/game_start_button"
	     android:layout_width="wrap_content"
	     android:layout_height="wrap_content"
	     android:layout_gravity="center"
	     android:paddingLeft="25dip"
	     android:paddingRight="25dip"
	     android:textSize="20sp"
	     />
    </LinearLayout>
</LinearLayout>
