<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >
    
    <!-- 回合 -->
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dip"
        android:layout_marginLeft="5dip">
        
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/text_round" 
	        android:textSize="20sp"
	        android:layout_marginRight="3dip"/>
	    
	    <TextView
	        android:id="@+id/round_game_view"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="20sp"/>
    </LinearLayout>
    
    <!-- 分隔线 -->
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dip"
        >
	    
	    <View 
	        android:layout_height="1dip"
	        android:layout_width="fill_parent"
	        android:background="#FF000000"/>
    
    </LinearLayout>
    
    <!-- 平民词汇 -->
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="5dip">
        
	    <TextView
	        android:id="@+id/text_civil_player_word_game_view"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/text_civil_player_word" 
	        android:textSize="20sp"
	        android:layout_marginRight="3dip"/>
	
	    <TextView
	        android:id="@+id/civil_player_word_game_view"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="20sp"/>
    </LinearLayout>
    
    <!-- 打酱油词汇 -->
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="5dip"
        android:layout_marginTop="5dip">
	    
	    <TextView
	        android:id="@+id/text_trick_player_word_game_view"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/text_trick_player_word" 
	        android:textSize="20sp"
	        android:layout_marginRight="3dip"/>
	
	    <TextView
		        android:id="@+id/trick_player_word_game_view"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textSize="20sp"/>
    </LinearLayout>
    
    <!-- 分隔线 -->
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dip"
        >
	    
	    <View 
	        android:layout_height="1dip"
	        android:layout_width="fill_parent"
	        android:background="#FF000000"/>
    
    </LinearLayout>
    
    <!-- 玩家列表 -->
    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/text_player_list" 
	        android:textSize="20sp"
	        android:layout_marginLeft="5dip"/>
    
    <!-- 需要动态添加元素 -->
    <ListView android:id="@android:id/list"
      	android:layout_width="fill_parent" 
      	android:layout_height="0dip"
      	android:layout_weight="1"
      	android:stackFromBottom="false"
      	android:transcriptMode="normal"/>
	
    <Button 
     android:id="@+id/replay_button"
     android:text="@string/replay_button"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:paddingLeft="25dip"
     android:paddingRight="25dip"
     android:textSize="20sp"
     />
    
</LinearLayout>
